Add news geathering

--- a/Knorr-news/appsettings.json
+++ b/Knorr-news/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "KnorrNewsContext": "Server=localhost\\SQL2022;Database=Knorr-news;Trusted_Connection=True;Integrated Security=True;Encrypt=False"
+  },
   "AllowedHosts": "*"
 }
